@@ -1,3 +1,13 @@
+2009-02-21  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Patch from Götz Waschk and
+	Milan Bouchet-Valat to add Office 2007/OpenXML documents
+	mime-types (Closes: #13904)
+	* tests/list:
+	* tests/sample.docx:
+	* tests/sample.pptx:
+	* tests/sample.xlsx: Add test files for the above
+
 2009-02-17  David Faure  <faure@kde.org>
 
 	* freedesktop.org.xml.in: Rename image/x-fits to image/fits
